--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(projects)
 find_package(OpenCV)
 set(CMAKE_CXX_STANDARD 14)
 include_directories(${OpenCV_INCLUDE_DIRS})
+add_executable(cast cast.cpp)
 add_executable(correct  correct.cpp)
+target_link_libraries(cast ${OpenCV_LIBS})
 target_link_libraries(correct ${OpenCV_LIBS})
